--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -167,6 +167,7 @@
 /bundles/org.openhab.binding.solarlog/ @johannrichard
 /bundles/org.openhab.binding.somfytahoma/ @octa22
 /bundles/org.openhab.binding.sonos/ @kgoderis @lolodomo
+/bundles/org.openhab.binding.sony/ @tmrobert8
 /bundles/org.openhab.binding.sonyaudio/ @freke
 /bundles/org.openhab.binding.sonyprojector/ @lolodomo
 /bundles/org.openhab.binding.spotify/ @Hilbrand
